edit java-classloader